# nwm_batcher

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: read_short_range.ipynb
src/nwm_batcher/: __init__.py  api.py  data_types.py
