[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/nwm_batcher/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nwm_batcher"]

[tool.hatch.build.targets.sdist]
packages = ["src/nwm_batcher"]

[project]
name = "nwm_batcher"
description = "A tool for taking batches of nc files from the NWM forecasts and concatting them to xarray datasets using virtualizarr"
readme = "README.md"
dynamic = ["version"] 
requires-python = ">=3.11.0"
license = {file = "LICENSE"}
authors = [
    {name = "Tadd Bindas"},
]
maintainers = [
    {name = "Tadd Bindas", email = "taddbindas@gmail.com"},
]

dependencies = [
    "dask==2025.2.0",
    "distributed==2025.2.0",
    "xarray==2025.1.2",
    "s3fs==2025.2.0",
    "virtualizarr==1.3.1",
    "h5py==3.13.0",
    "cubed-xarray==0.0.7",
    "h5netcdf==1.5.0",
    "ipykernel==6.29.5",
    "matplotlib==3.10.3",
    "kerchunk==0.2.8",
    "boto3==1.38.18",
]
